--- a/src/scss/_Page.scss
+++ b/src/scss/_Page.scss
@@ -181,7 +181,7 @@
 }
 
 .contact-form button {
-  background-color: #007bff;
+  background-color: #2e2d2d;
   color: #fff;
   padding: 10px 20px;
   border: none;
@@ -190,5 +190,5 @@
 }
 
 .contact-form button:hover {
-  background-color: #0056b3;
+  background-color: #000000;
 }
