Add one project to Projectspage.tsx

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
+
+
 .top-nav-container {
   display: flex;
   justify-content: space-around;
@@ -359,3 +363,4 @@ h4 {
 
 .back-to-top-button:hover {
   color: #333; }
+
